<resources>
    <string name="splash_activity">Splash Activity</string>
    <string name="app_name">X-change</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account">ACCOUNT</string>
    <string name="my_ads">MY ADS</string>
    <string name="sell">SELL</string>
    <string name="chats">CHATS</string>
    <string name="home">HOME</string>
    <string name="just_exchange">Just exchange</string>
    <string name="sign_in_login">Sign In/Login</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_phone">Continue with Phone</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="what_are_you_offering">What are you offering?</string>
    <string name="product_name">Product Name*</string>
    <string name="mention_the_key_features_of_your_item">Mention the key features of your item</string>
    <string name="type">Type*</string>
    <string name="mention_the_category_of_your_item_ex_property_electronics_vehicle">Mention the category of your item(eg. property, electronics, vehicle)</string>
    <string name="description">Description*</string>
    <string name="include_features_condition_and_reason_for_selling">Include features, condition and reason for selling</string>
    <string name="required_fields">* Required Fields</string>
    <string name="navigate_back">navigate back</string>
    <string name="set_price_for_your_item">Set price for your item</string>
    <string name="price">Price(INR)*</string>
    <string name="next">Next</string>
    <string name="images">Images</string>
    <string name="select_images">Select Images</string>
    <string name="set_location">Set Location</string>
    <string name="location">Location</string>
</resources>