<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context=".activity.UserLoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="bottom"
        android:layout_weight="60">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/x_change"
            android:textSize="40sp"
            android:textColor="@color/sailor_blue"
            android:textStyle="bold"
            android:gravity="center_horizontal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/just_exchange"
            android:textSize="16sp"
            android:textColor="@color/sailor_blue"
            android:textStyle="bold"
            android:gravity="center_horizontal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="16sp"
            android:layout_marginTop="160dp"
            android:text="@string/sign_in_login"
            android:textStyle="bold" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="@color/sailor_blue"
        android:layout_weight="40">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="32dp"
            android:id="@+id/googleLogin"
            android:background="@drawable/login_buttons_background">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="16dp"
                android:src="@drawable/googleicon"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/continue_with_google"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginStart="40dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/login_buttons_background">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="16dp"
                android:src="@drawable/facebookicon"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/continue_with_facebook"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginStart="40dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/login_buttons_background">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="16dp"
                android:src="@drawable/mobileicon"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/continue_with_phone"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginStart="40dp"/>

        </LinearLayout>


    </LinearLayout>


</LinearLayout>